each player has it's own board to easily track each player game view state